<resources>
    <string name="app_name">MyTodo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_list">Todo List</string>
    <string name="done_list">Done List</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="add_todo">Add Todo</string>
    <string name="event_title">Event Title</string>
    <string name="until">Until</string>
    <string name="detail">Detail</string>
    <string name="end_date">End Date</string>
    <string name="clock_image">Clock Image</string>
    <string name="calendar">calendar</string>
    <string name="important">Important</string>
</resources>